fixes to overflow problems on project cards

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -896,14 +896,16 @@ p {
   .project__tech {
     display: flex;
     flex-direction: row;
-    justify-content: start; }
+    justify-content: start;
+    flex-wrap: wrap; }
     .project__tech-item {
       background-color: var(--color-raisin-black);
       color: white;
       padding: 1rem;
       border-radius: 5px;
       font-size: 1.4rem;
-      font-weight: 100; }
+      font-weight: 100;
+      margin-top: 1rem; }
       .project__tech-item:not(:last-child) {
         margin-right: 1rem; }
 
