--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -90,7 +90,6 @@
         max-width: 100%;
       }
 
-      &--
     }
 
     &__text{
@@ -146,6 +145,7 @@
     display: flex;
     flex-direction: row;
     justify-content: start;
+    flex-wrap: wrap;
 
     &-item {
       background-color: var(--color-raisin-black);
@@ -154,6 +154,7 @@
       border-radius: 5px;
       font-size: 1.4rem;
       font-weight: 100;
+      margin-top: 1rem;
 
       &:not(:last-child) {
         margin-right: 1rem;
